	get when we can't open the file because too many files are already
	open. It should also be marginally quicker. If we can't open the
	file, we print everything to stderr too now.

2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* data/dbus/tracker-metadata.xml
	* src/trackerd/tracker-metadata.[ch]:
	Async metadata API.
	
2008-07-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Add the functions for the
	combine-attached db connections

2008-07-16  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-field.[ch]:
	(tracker_field_type_as_string): Added method to translate field types
	in readable format.
	
	* data/sqlite-stored-procs.sql: Removed SelectMetadataClasses and
	added SelectRegisteredClasses.
	
	* src/trackerd/tracker-db.c:
	(tracker_db_service_get_by_entity): Reimplemented using an easier
	DB query and tracker_ontology to translate the result to string.
	(tracker_db_metadata_set_single): Added NULL at the end of the
	array.
	Renamed service -> service_type and id -> service_id
	
	* src/trackerd/tracker-metadata.c: 
	(tracker_metadata_get_type_details): Implemented using
	tracker_ontology instead accessing to the DB.
	Fixed things here and there. Now the metadata API actually works.
	
2008-07-16  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-utils.[ch]: Make it possible to
	have a shortened version of the time string.
	
	* src/libtracker-db/tracker-db-manager.c: When setting up multiple
	interfaces, don't assume we ALWAYS want to "add_functions",
	instead use the array value for that database type (as we do
	normally).
	
	* src/tracker-indexer/tracker-indexer.c: Don't print a status
	message if there are 0 items remaining and change the transaction
	limit to 200.
	
	* src/trackerd/tracker-dbus.c: Added signal prototypes for the
	indexer for module-started, module-finished and started signals.
	
	* src/trackerd/tracker-processor.c: Use nicer debugging and