@@ -125,8 +125,9 @@ tracker_metadata_get_embedded (const char *path,
 		if (!utf_value)
 			continue;
 
-		/* FIXME: name should be const */
-		g_hash_table_insert (table, g_strdup (name), utf_value);
+		g_hash_table_insert (table, 
+				     g_object_ref (tracker_ontology_get_field_def (name)), 
+				     utf_value);
 	}
 
 	g_strfreev (values);
@@ -215,38 +216,51 @@ tracker_module_file_get_metadata (TrackerFile *file)
 	}
 
 	g_lstat (path, &st);
-	metadata = g_hash_table_new_full (g_str_hash, g_str_equal,
-					  NULL,
+	metadata = g_hash_table_new_full (g_direct_hash, g_direct_equal,
+					  (GDestroyNotify) g_object_unref,
 					  (GDestroyNotify) g_free);
 	ext = strrchr (path, '.');
 
 	if (ext) {
-		g_hash_table_insert (metadata, METADATA_FILE_EXT, g_strdup (ext + 1));
+		g_hash_table_insert (metadata, 
+				     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_EXT)), 
+				     g_strdup (ext + 1));
 	}
 
 	mimetype = tracker_file_get_mime_type (path);
 
-	g_hash_table_insert (metadata, METADATA_FILE_NAME, g_filename_display_basename (path));
-	g_hash_table_insert (metadata, METADATA_FILE_PATH, g_path_get_dirname (path));
-	g_hash_table_insert (metadata, METADATA_FILE_NAME_DELIMITED,
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_NAME)), 
+			     g_filename_display_basename (path));
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_PATH)),
+			     g_path_get_dirname (path));
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_NAME_DELIMITED)),
 			     g_filename_to_utf8 (path, -1, NULL, NULL, NULL));
-	g_hash_table_insert (metadata, METADATA_FILE_MIMETYPE, mimetype);
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_MIMETYPE)), 
+			     mimetype);
 
 	if (S_ISLNK (st.st_mode)) {
 		gchar *link_path;
 
 		link_path = g_file_read_link (path, NULL);
-		g_hash_table_insert (metadata, METADATA_FILE_LINK,
+		g_hash_table_insert (metadata, 
+				     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_LINK)),
 				     g_filename_to_utf8 (link_path, -1, NULL, NULL, NULL));
 		g_free (link_path);
 	}
 
 	/* FIXME: These should be dealt directly as integer/times/whatever, not strings */
-	g_hash_table_insert (metadata, METADATA_FILE_SIZE,
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_SIZE)),
 			     tracker_uint_to_string (st.st_size));
-	g_hash_table_insert (metadata, METADATA_FILE_MODIFIED,
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_MODIFIED)),
 			     tracker_uint_to_string (st.st_mtime));
-	g_hash_table_insert (metadata, METADATA_FILE_ACCESSED,
+	g_hash_table_insert (metadata, 
+			     g_object_ref (tracker_ontology_get_field_def (METADATA_FILE_ACCESSED)),
 			     tracker_uint_to_string (st.st_atime));
 
 	tracker_metadata_get_embedded (path, mimetype, metadata);
